--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,8 @@
 @import "../../node_modules/normalize.css/normalize";
 
-@import "./components/menu";
+@import "./globals";
 
+@import "layout/header";
+
+@import "./components/menu";
+@import "./components/logo";
