--- a/src/css/app.css
+++ b/src/css/app.css
@@ -332,7 +332,10 @@ html, body {
 }
 
 .logo {
-  background-color: lightgreen;
+  background-image: url("../images/logo.svg");
+  width: 6.25rem;
+  height: 6.25rem;
+  display: inline-block;
 }
 
 /*# sourceMappingURL=app.css.map */
