--- a/src/css/app.css
+++ b/src/css/app.css
@@ -311,6 +311,18 @@ html, body {
   font-size: 16px;
 }
 
+@font-face {
+  font-family: "Roboto Bold";
+  src: url("../fonts/roboto-bold-webfont.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Roboto Light";
+  src: url("../fonts/roboto-light-webfont.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
 .header {
   background-color: lightcoral;
 }
