--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,3 +2,6 @@ $base-font-size: 16px;
 
 $img-path: '../images';
 $font-path: '../fonts';
+
+$font-path: '../fonts';
+$fonts: ('Roboto Bold': 'roboto-bold-webfont', 'Roboto Light': 'roboto-light-webfont');
