--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -1,12 +1,30 @@
+@import "../helpers/functions";
+@import "../helpers/mixins";
+
 .menu {
   background-color: peru;
+  align-self: flex-end;
+  @include flex(flex-end);
 
   &__item {
-    color: blue;
+    color: darkgray;
+    background-color: white;
     text-decoration: none;
+    display: inline-block;
+    padding: rem(15px) rem(20px);
+    text-transform: uppercase;
+    font-family: "Roboto Light", sans-serif;
+    font-size: rem(20px);
+    transition: all 200ms ease-in;
 
-    &--active, &:hover {
-      color: lightgoldenrodyellow;
+    &:first-child {
+      border-top-left-radius: rem(4px);
+    }
+    &:last-child {
+      border-top-right-radius: rem(4px);
+    }
+    @include link(white, darkgrey) {
+      border-bottom: 3px solid blue;
     }
   }
 }
