--- a/src/sass/helpers/mixins.scss
+++ b/src/sass/helpers/mixins.scss
@@ -8,3 +8,28 @@
     font-style: normal;
   }
 }
+
+@mixin flex($justify-content: flex-start, $align-items: flex-start, $wrap: no-wrap) {
+  display: flex;
+  justify-content: $justify-content;
+  align-items: $align-items;
+  flex-wrap: $wrap;
+}
+
+@mixin link($h-color, $h-bg) {
+  &:link {
+    @content;
+  }
+  &:visited {
+    @content;
+  }
+  &:active {
+    @content;
+  }
+  &--active, &:hover {
+    @content;
+    color: $h-color;
+    background-color: $h-bg;
+  }
+
+}
